--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.13.2",
+    "@types/i18next": "^13.0.0",
+    "@types/react-i18next": "^8.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
+    "i18next": "^23.10.1",
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-i18next": "^14.1.0",
     "react-query": "^3.39.3",
     "strapi-sdk-js": "^2.3.3",
     "tailwind-merge": "^2.2.1",
