--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/react-i18next": "^8.1.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"cookies-next": "^4.1.1",
 		"date-fns": "^3.6.0",
 		"framer-motion": "^11.0.20",
 		"i18next": "^23.10.1",
