--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"react-html-parser": "^2.0.2",
 		"react-i18next": "^14.1.0",
 		"react-query": "^3.39.3",
+		"react-toastify": "^10.0.5",
 		"strapi-sdk-js": "^2.3.3",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
