--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
 		"cookies-next": "^4.1.1",
 		"date-fns": "^3.6.0",
 		"framer-motion": "^11.0.20",
+		"html-react-parser": "^5.1.10",
 		"i18next": "^23.10.1",
 		"lucide-react": "^0.344.0",
 		"next": "14.1.2",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.51.0",
-		"react-html-parser": "^2.0.2",
 		"react-i18next": "^14.1.0",
 		"react-query": "^3.39.3",
 		"react-toastify": "^10.0.5",
@@ -50,7 +50,6 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"@types/react-html-parser": "^2.0.6",
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8",
 		"eslint-config-next": "14.1.2",
